// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthPieChart should render correctly for many connectionFailures 1`] = `
<DocumentFragment>
  <div
    style="height: 300px; width: 300px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        class="styledComponents__HealthPieChartWrapper-sc-1iwj7vu-10 cYBhEp"
      >
        <div
          class="styledComponents__PieChartTitle-sc-1iwj7vu-11 knUccq"
        >
          <b>
            Authentication
          </b>
           Top 5 Impacted WLANs
        </div>
        <div
          style="height: 260px; min-width: 430px;"
        >
          <div
            style="text-align: center;"
          >
            <div
              class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
            >
              <div
                class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
              >
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="nodes"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Venues
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="wlans"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    WLANs
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              class="ant-space ant-space-vertical"
            >
              <div
                class="ant-space-item"
              >
                <div
                  _echarts_instance_="ec_mock"
                  class="echarts-for-react "
                  size-sensor-id="sensor-mock"
                  style="height: 800px; width: 1280px; position: relative;"
                >
                  <div
                    style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                  >
                    <svg
                      baseProfile="full"
                      height="800"
                      style="position:absolute;left:0;top:0;user-select:none"
                      version="1.1"
                      width="1280"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <rect
                        fill="none"
                        fill-opacity="1"
                        height="800"
                        id="0"
                        width="1280"
                        x="0"
                        y="0"
                      />
                      <g>
                        <path
                          d="M384 72A328 328 0 0 1 584.7022 659.4275L525.9601 583.4975A232 232 0 0 0 384 168Z"
                          fill="#66B1E8"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M584.7022 659.4275A328 328 0 0 1 126.8907 603.6635L202.1422 544.0547A232 232 0 0 0 525.9601 583.4975Z"
                          fill="#EC7100"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M126.8907 603.6635A328 328 0 0 1 92.559 249.5136L177.8588 293.5584A232 232 0 0 0 202.1422 544.0547Z"
                          fill="#F9C34B"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M92.559 249.5136A328 328 0 0 1 266.3383 93.8306L300.7759 183.4411A232 232 0 0 0 177.8588 293.5584Z"
                          fill="#61C46E"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M266.3383 93.8306A328 328 0 0 1 384 72L384 168A232 232 0 0 0 300.7759 183.4411Z"
                          fill="#F095FF"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M-5 -5l40 0l0 154l-40 0Z"
                          fill="rgb(0,0,0)"
                          fill-opacity="0"
                          stroke="#ccc"
                          stroke-width="0"
                          transform="translate(709 328)"
                        />
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#66B1E8"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 332)"
                        />
                        <path
                          d="M13 -4l14 0l0 16l-14 0Z"
                          fill="none"
                          transform="translate(709 332)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 332)"
                          x="13"
                          y="4"
                        >
                          HD_OTA_WPA3_6E
                        </text>
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#EC7100"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 364)"
                        />
                        <path
                          d="M13 -4l7 0l0 16l-7 0Z"
                          fill="none"
                          transform="translate(709 364)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 364)"
                          x="13"
                          y="4"
                        >
                          DENSITY
                        </text>
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#F9C34B"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 396)"
                        />
                        <path
                          d="M13 -4l17 0l0 16l-17 0Z"
                          fill="none"
                          transform="translate(709 396)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 396)"
                          x="13"
                          y="4"
                        >
                          DENSITY-COMMSCOPE
                        </text>
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#61C46E"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 428)"
                        />
                        <path
                          d="M13 -4l13 0l0 16l-13 0Z"
                          fill="none"
                          transform="translate(709 428)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 428)"
                          x="13"
                          y="4"
                        >
                          DENSITY-GUEST
                        </text>
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#F095FF"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 460)"
                        />
                        <path
                          d="M13 -4l5 0l0 16l-5 0Z"
                          fill="none"
                          transform="translate(709 460)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 460)"
                          x="13"
                          y="4"
                        >
                          aaron
                        </text>
                        <path
                          d="M-5 -5l10 0l0 10l-10 0Z"
                          fill="rgb(0,0,0)"
                          fill-opacity="0"
                          stroke="#ccc"
                          stroke-width="0"
                          transform="translate(363.4 400)"
                        />
                        <path
                          d="M0 0l0 0l0 0l0 0Z"
                          fill="none"
                          transform="translate(363.4 400)"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class=""
                  />
                  <object
                    class="size-sensor-object"
                    data="about:blank"
                    style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                    tabindex="-1"
                    type="text/html"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;

exports[`HealthPieChart should render correctly for missing nodes data 1`] = `
<DocumentFragment>
  <div
    style="height: 300px; width: 300px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        class="styledComponents__HealthPieChartWrapper-sc-1iwj7vu-10 cYBhEp"
      >
        <div
          class="styledComponents__PieChartTitle-sc-1iwj7vu-11 knUccq"
        >
          <b>
            Authentication
          </b>
           1 Impacted WLAN
        </div>
        <div
          style="height: 260px; min-width: 430px;"
        >
          <div
            class="styledComponents__SinglePieChartWrapper-sc-1iwj7vu-12 kFdXHe"
          >
            <div
              style="overflow: visible; height: 0px; width: 0px;"
            >
              <div
                class="ant-space ant-space-vertical"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    _echarts_instance_="ec_mock"
                    class="echarts-for-react "
                    size-sensor-id="sensor-mock"
                    style="height: 800px; width: 1280px; position: relative;"
                  >
                    <div
                      style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                    >
                      <svg
                        baseProfile="full"
                        height="800"
                        style="position:absolute;left:0;top:0;user-select:none"
                        version="1.1"
                        width="1280"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <rect
                          fill="none"
                          fill-opacity="1"
                          height="800"
                          id="0"
                          width="1280"
                          x="0"
                          y="0"
                        />
                        <g>
                          <path
                            d="M384 72A328 328 0 1 1 383.9672 72M384 168A232 232 0 1 0 384.0232 168Z"
                            fill="#66B1E8"
                            stroke="#FFFFFF"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                          <path
                            d="M-5 -5l34 0l0 26l-34 0Z"
                            fill="rgb(0,0,0)"
                            fill-opacity="0"
                            stroke="#ccc"
                            stroke-width="0"
                            transform="translate(709 392)"
                          />
                          <path
                            d="M8 4A4 4 0 1 1 8 3.9996"
                            fill="#66B1E8"
                            stroke="#FFFFFF"
                            stroke-linecap="butt"
                            stroke-linejoin="round"
                            stroke-miterlimit="10"
                            stroke-width="0"
                            transform="translate(709 396)"
                          />
                          <path
                            d="M13 -4l11 0l0 16l-11 0Z"
                            fill="none"
                            transform="translate(709 396)"
                          />
                          <text
                            dominant-baseline="central"
                            fill="#333333"
                            style="font-size:10px;font-family:'Open Sans', sans-serif;"
                            text-anchor="start"
                            transform="translate(709 396)"
                            x="13"
                            y="4"
                          >
                            aaron-dot1x
                          </text>
                          <path
                            d="M-5 -5l10 0l0 10l-10 0Z"
                            fill="rgb(0,0,0)"
                            fill-opacity="0"
                            stroke="#ccc"
                            stroke-width="0"
                            transform="translate(363.4 400)"
                          />
                          <path
                            d="M0 0l0 0l0 0l0 0Z"
                            fill="none"
                            transform="translate(363.4 400)"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      class=""
                    />
                    <object
                      class="size-sensor-object"
                      data="about:blank"
                      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                      tabindex="-1"
                      type="text/html"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1281px; height: 801px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;

exports[`HealthPieChart should render correctly for single ttc failures 1`] = `
<DocumentFragment>
  <div
    style="height: 300px; width: 300px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        class="styledComponents__HealthPieChartWrapper-sc-1iwj7vu-10 cYBhEp"
      >
        <div
          class="styledComponents__PieChartTitle-sc-1iwj7vu-11 knUccq"
        >
          <b>
            Authentication
          </b>
           1 Impacted WLAN
        </div>
        <div
          style="height: 260px; min-width: 430px;"
        >
          <div
            style="text-align: center;"
          >
            <div
              class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
            >
              <div
                class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
              >
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="nodes"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Venue
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="wlans"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    WLAN
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              class="ant-space ant-space-vertical"
            >
              <div
                class="ant-space-item"
              >
                <div
                  _echarts_instance_="ec_mock"
                  class="echarts-for-react "
                  size-sensor-id="sensor-mock"
                  style="height: 800px; width: 1280px; position: relative;"
                >
                  <div
                    style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                  >
                    <svg
                      baseProfile="full"
                      height="800"
                      style="position:absolute;left:0;top:0;user-select:none"
                      version="1.1"
                      width="1280"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <rect
                        fill="none"
                        fill-opacity="1"
                        height="800"
                        id="0"
                        width="1280"
                        x="0"
                        y="0"
                      />
                      <g>
                        <path
                          d="M384 72A328 328 0 1 1 383.9672 72M384 168A232 232 0 1 0 384.0232 168Z"
                          fill="#66B1E8"
                          stroke="#FFFFFF"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                        <path
                          d="M-5 -5l34 0l0 26l-34 0Z"
                          fill="rgb(0,0,0)"
                          fill-opacity="0"
                          stroke="#ccc"
                          stroke-width="0"
                          transform="translate(709 392)"
                        />
                        <path
                          d="M8 4A4 4 0 1 1 8 3.9996"
                          fill="#66B1E8"
                          stroke="#FFFFFF"
                          stroke-linecap="butt"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="0"
                          transform="translate(709 396)"
                        />
                        <path
                          d="M13 -4l11 0l0 16l-11 0Z"
                          fill="none"
                          transform="translate(709 396)"
                        />
                        <text
                          dominant-baseline="central"
                          fill="#333333"
                          style="font-size:10px;font-family:'Open Sans', sans-serif;"
                          text-anchor="start"
                          transform="translate(709 396)"
                          x="13"
                          y="4"
                        >
                          aaron-dot1x
                        </text>
                        <path
                          d="M-5 -5l10 0l0 10l-10 0Z"
                          fill="rgb(0,0,0)"
                          fill-opacity="0"
                          stroke="#ccc"
                          stroke-width="0"
                          transform="translate(363.4 400)"
                        />
                        <path
                          d="M0 0l0 0l0 0l0 0Z"
                          fill="none"
                          transform="translate(363.4 400)"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class=""
                  />
                  <object
                    class="size-sensor-object"
                    data="about:blank"
                    style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                    tabindex="-1"
                    type="text/html"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;
